Reduce the SSH persistence for BitBucket.

--- a/ssh/ssh.symlink/config
+++ b/ssh/ssh.symlink/config
@@ -1,6 +1,7 @@
 Host bitbucket.org
      PreferredAuthentications publickey
      IdentityFile ~/.ssh/bitbucket
+     ControlPersist 60
 
 Host *
      ControlPath ~/.ssh/.%h.%p.%r
