--- a/ssh/ssh.symlink/config
+++ b/ssh/ssh.symlink/config
@@ -7,6 +7,10 @@ Host github.com gist.github.com
      PreferredAuthentications publickey
      IdentityFile ~/.ssh/github
 
+Host git.code.sf.net
+     PreferredAuthentications publickey
+     IdentityFile ~/.ssh/sourceforge
+
 Host *
      ControlPath ~/.ssh/.%h.%p.%r
      ControlMaster auto
