--- a/ssh/ssh.symlink/config
+++ b/ssh/ssh.symlink/config
@@ -1,16 +1,3 @@
-Host bitbucket.org
-     PreferredAuthentications publickey
-     IdentityFile ~/.ssh/bitbucket
-     ControlPersist 60
-
-Host github.com gist.github.com
-     PreferredAuthentications publickey
-     IdentityFile ~/.ssh/github
-
-Host git.code.sf.net
-     PreferredAuthentications publickey
-     IdentityFile ~/.ssh/sourceforge
-
 Host *
      ControlPath ~/.ssh/.%h.%p.%r
      ControlMaster auto
@@ -22,3 +9,14 @@ Host *
      TCPKeepAlive no
      ServerAliveInterval 30
      ServerAliveCountMax 10
+#     PubkeyAuthentication no
+     IdentitiesOnly yes
+
+Host bitbucket.org
+     PreferredAuthentications publickey
+     IdentityFile ~/.ssh/bitbucket
+     ControlPersist 60
+
+Host git.code.sf.net
+     PreferredAuthentications publickey
+     IdentityFile ~/.ssh/sourceforge
