--- a/ssh/ssh.symlink/config
+++ b/ssh/ssh.symlink/config
@@ -5,7 +5,7 @@ Host *
      CheckHostIP yes
      Compression yes
      HashKnownHosts yes
-     ForwardAgent yes
+     ForwardAgent no
      ForwardX11 no
      ForwardX11Trusted no
      TCPKeepAlive yes
@@ -16,9 +16,8 @@ Host *
      PasswordAuthentication no
      ChallengeResponseAuthentication no
      PubkeyAuthentication yes
-     Ciphers aes256-ctr,aes128-ctr,aes256-cbc,aes128-cbc
-     KexAlgorithms curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
-     HostKeyAlgorithms ssh-ed25519-cert-v01@openssh.com,ssh-rsa-cert-v01@openssh.com,ssh-rsa-cert-v00@openssh.com,ssh-ed25519,ssh-rsa
+     KexAlgorithms curve25519-sha256@libssh.org,ecdh-sha2-nistp521,ecdh-sha2-nistp256,ecdh-sha2-nistp384,diffie-hellman-group-exchange-sha256
+     HostKeyAlgorithms ssh-ed25519-cert-v01@openssh.com,ssh-rsa-cert-v01@openssh.com,ssh-ed25519,ssh-rsa,ecdsa-sha2-nistp521-cert-v01@openssh.com,ecdsa-sha2-nistp384-cert-v01@openssh.com,ecdsa-sha2-nistp256-cert-v01@openssh.com,ecdsa-sha2-nistp521,ecdsa-sha2-nistp384,ecdsa-sha2-nistp256
      Ciphers chacha20-poly1305@openssh.com,aes256-gcm@openssh.com,aes128-gcm@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
      MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-ripemd160-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,hmac-ripemd160,umac-128@openssh.com
 
@@ -27,6 +26,6 @@ Host bitbucket.org
      IdentityFile ~/.ssh/bitbucket
      ControlPersist 60
 
-Host git.code.sf.net
+Host *.sf.net *.sourceforge.net
      PreferredAuthentications publickey
      IdentityFile ~/.ssh/sourceforge
