--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "emacs/emacs.d.symlink/lisp/emacs-flymake"]
 	path = emacs/emacs.d.symlink/lisp/emacs-flymake
 	url = https://github.com/illusori/emacs-flymake.git
+[submodule "emacs/emacs.d.symlink/lisp/emacs-flymake-cursor"]
+	path = emacs/emacs.d.symlink/lisp/emacs-flymake-cursor
+	url = https://github.com/illusori/emacs-flymake-cursor.git
