Disable ControlMaster for bitbucket.

--- a/ssh/ssh.symlink/config
+++ b/ssh/ssh.symlink/config
@@ -1,7 +1,7 @@
 Host bitbucket.org
      PreferredAuthentications publickey
      IdentityFile ~/.ssh/bitbucket
-     ControlPersist 60
+     ControlMaster no
      StrictHostKeyChecking no
 
 Host github.com
