--- a/ssh/ssh.symlink/config
+++ b/ssh/ssh.symlink/config
@@ -17,6 +17,9 @@ Host *.m3drano.ch
      PreferredAuthentications publickey
      IdentityFile ~/.ssh/google_compute_engine
 
+Host raspberrypi
+     PreferredAuthentications publickey
+
 Host *
      ControlPath ~/.ssh/.%h.%p.%r
      ControlMaster auto
