--- a/ssh/ssh.symlink/config
+++ b/ssh/ssh.symlink/config
@@ -17,7 +17,7 @@ Host *.m3drano.ch
      PreferredAuthentications publickey
      IdentityFile ~/.ssh/google_compute_engine
 
-Host raspberrypi
+Host *.local
      PreferredAuthentications publickey
 
 Host *
