Restate the GCE SSH key.

--- a/ssh/ssh.symlink/config
+++ b/ssh/ssh.symlink/config
@@ -20,6 +20,9 @@ Host *.m3drano.ch
 Host *.local
      PreferredAuthentications publickey
 
+Host *-gce.compute.m3drano.ch
+     IdentityFile ~/.ssh/gce
+
 Host *
      UseKeyChain no
      ControlPath ~/.ssh/.%h.%p.%r
