--- a/ssh/ssh.symlink/config
+++ b/ssh/ssh.symlink/config
@@ -1,24 +1,12 @@
 Host bitbucket.org
-     PreferredAuthentications publickey
      IdentityFile ~/.ssh/bitbucket
-     CheckHostIP no
      ControlMaster no
 
 Host github.com gist.github.com
-     PreferredAuthentications publickey
      IdentityFile ~/.ssh/github
-     CheckHostIP no
 
 Host *.sf.net *.sourceforge.net
-     PreferredAuthentications publickey
      IdentityFile ~/.ssh/sourceforge
-     CheckHostIP no
-
-Host *.m3drano.ch
-     PreferredAuthentications publickey
-
-Host *.local
-     PreferredAuthentications publickey
 
 Host *-gce.compute.m3drano.ch
      IdentityFile ~/.ssh/gce
@@ -28,7 +16,7 @@ Host *
      ControlPath ~/.ssh/.%h.%p.%r
      ControlMaster auto
      ControlPersist 600
-     CheckHostIP yes
+     CheckHostIP no
      Compression yes
      HashKnownHosts yes
      ForwardAgent no
@@ -42,9 +30,11 @@ Host *
      PasswordAuthentication no
      ChallengeResponseAuthentication no
      PubkeyAuthentication yes
+     PreferredAuthentications publickey
      GSSAPIAuthentication no
      GSSAPIDelegateCredentials no
      KexAlgorithms curve25519-sha256@libssh.org,ecdh-sha2-nistp521,ecdh-sha2-nistp256,ecdh-sha2-nistp384,diffie-hellman-group-exchange-sha256
      HostKeyAlgorithms ssh-ed25519-cert-v01@openssh.com,ssh-rsa-cert-v01@openssh.com,ssh-ed25519,ssh-rsa,ecdsa-sha2-nistp521-cert-v01@openssh.com,ecdsa-sha2-nistp384-cert-v01@openssh.com,ecdsa-sha2-nistp256-cert-v01@openssh.com,ecdsa-sha2-nistp521,ecdsa-sha2-nistp384,ecdsa-sha2-nistp256
      Ciphers chacha20-poly1305@openssh.com,aes256-gcm@openssh.com,aes128-gcm@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
      MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,umac-128@openssh.com
+     VerifyHostKeyDNS ask
