Strict host checking now that DNSSEC is enabled.

--- a/ssh/ssh.symlink/config
+++ b/ssh/ssh.symlink/config
@@ -8,6 +8,10 @@ Host github.com gist.github.com
 Host *.sf.net *.sourceforge.net
      IdentityFile ~/.ssh/sourceforge
 
+Host *.m3drano.ch
+     StrictHostKeyChecking yes
+     VerifyHostKeyDNS yes
+
 Host *.gce.compute.m3drano.ch *-gce.compute.m3drano.ch
      IdentityFile ~/.ssh/gce
 
