Long overdue sync.

--- a/ssh/ssh.symlink/config
+++ b/ssh/ssh.symlink/config
@@ -1,12 +1,10 @@
 Host github.com gist.github.com
      IdentityFile ~/.ssh/github
+     ControlPersist 3600
 
 Host *.sf.net *.sourceforge.net
      IdentityFile ~/.ssh/sourceforge
      PubkeyAcceptedKeyTypes +ssh-rsa
-
-Host Computador.local
-     IdentityFile ~/.ssh/id_rsa
 
 Host *.m3drano.ch
      StrictHostKeyChecking ask
